# evidive

./: .env.example  .env.production  .gitignore  AGENTS.md  AGENT_TEST_PROMPT.md  AUDIT_REPORT.md  AUDIT_REPORT_SEO_I18N.md  CORRECTIONS_SUMMARY.md  FEATURE_MULTIPLE_CENTERS.md  PLAN_ONBOARD_COMPLET.md  README.md  RELEASE_TEST_PROMPT.md  SEO-I18N-AUDIT-REPORT.md  STRIPE-WEBHOOK-SETUP.md  VERCEL-SETUP.md  VERCEL_BLOB_SETUP.md  VIDEO-PROMPTS-AIVIDEO.md  VIDEO-PROMPTS.md  WhatsApp Ptt 2026-02-05 at 20.27.53.txt  eslint.config.mjs  evidive-opst-plan-1299e6.md  lighthouse-report.json  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  pnpm-lock.yaml  tailwind.config.ts  transcribe_audio.py  tsconfig.json  vercel.json
Docs/: _analysis.md  _database_analysis.md
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  proxy.ts  robots.ts  sitemap.ts
backend/: .gitignore  Cargo.toml  Dockerfile  Schema.md  errors.md  vercel.json
backend/api/: handler.rs
backend/migrations/: 016_add_missing_tables.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: center.rs  mod.rs  platform_config.rs  profile.rs  reference.rs  service.rs
backend/src/routes/: admin.rs  admin_advanced.rs  admin_settings.rs  bookings.rs  centers.rs  contact.rs  coupons.rs  dashboard.rs  health.rs  members.rs  mod.rs  payments.rs  profile.rs  reference.rs  reviews.rs  services.rs  staff.rs  stripe_connect.rs  webhook.rs
backend/src/services/: email.rs  mod.rs  stripe.rs
backend/tests/: bookings.rs  health.rs  webhook.rs
frontend/: .env.example  .prettierignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts
hooks/: use-auto-translate.ts
lib/: auth.ts  email.ts  stripe.ts  utils.ts
messages/: de.json  el.json  en.json  es.json  fr.json  it.json  nl.json  pl.json  (+3 more)
(+725 files in other folders)
