[package]
name = "evidive-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "set-header"] }
http = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
    "rust_decimal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Payments
stripe = { package = "async-stripe", version = "0.31", default-features = false, features = [
    "runtime-tokio-hyper",
    "checkout",
    "billing",
    "connect",
    "webhook-events",
] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for JWKS fetch at startup)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Rate limiting
tower_governor = "0.8"

# Vercel serverless runtime (deploys as a single Lambda-style function)
vercel_runtime = { version = "2", features = ["axum"] }
anyhow = "1"

# Utils
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
thiserror = "2"

# Vercel serverless handler entry point (api/handler.rs)
[[bin]]
name = "handler"
path = "api/handler.rs"

[dev-dependencies]
http-body-util = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
